--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.4",
     "body-parser": "^1.20.2",
+    "bolt11": "^1.4.1",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   }
