--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "databuffet",
   "private": true,
   "scripts": {
-    "nip105-server": "bun run apps/server/index.ts"
+    "nip105-server": "bun run apps/server/index.ts",
+    "nip105-server-test": "bun run apps/server/test.ts"
   },
   "devDependencies": {
     "bun-types": "latest"
@@ -19,6 +20,7 @@
     "body-parser": "^1.20.2",
     "bolt11": "^1.4.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nostr-tools": "^1.17.0"
   }
 }
