--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "nip105-server": "bun run apps/server/index.ts",
-    "nip105-server-test": "bun run apps/server/test.ts"
+    "nip105-server-test": "bun run apps/server/test.ts",
+    "nip105-viewer": "cd apps/viewer && bun run dev"
   },
   "devDependencies": {
     "bun-types": "latest"
@@ -21,6 +22,7 @@
     "bolt11": "^1.4.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nostr-tools": "^1.17.0"
+    "nostr-tools": "^1.17.0",
+    "webln": "^0.3.2"
   }
 }
