added stable diffusion

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ PRIVATE_KEY_FILEPATH=nostr.private.key
 # ChatGPT
 CHAT_GPT_API_KEY=
 
+# Stable Diffusion
+SD_API_KEY=
+
 ### TESTS
 # TEST SCRIPT
 SHOW_LOGS=true
