--- a/apps/viewer/package.json
+++ b/apps/viewer/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "nip105": "workspace:*",
+    "utils": "workspace:*",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.0.3"
